# groot

./: .env.example  .gitignore  .gitmodules  .mcp.json  .semgrepignore  Makefile  docker-bake.hcl  docker-compose.local.yml  docker-compose.yml
.github/workflows/: baas-ci.yml  mini-baas-security.yml
apps/baas/config/: kong.track-binocle.yml
apps/baas/mini-baas-infra/: .gitignore  .gitleaks.toml  .trivyignore  DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  docker-bake.hcl  docker-compose.cloud.yml  docker-compose.graphql.yml  docker-compose.pooler.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml
apps/baas/mini-baas-infra/docker/services/data-plane-router/: Cargo.toml  Dockerfile  Dockerfile.nano  Dockerfile.one
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/data-plane-core/src/: capability.rs  error.rs  filter.rs  isolation.rs  lib.rs  mount.rs  operation.rs  plan.rs  planner.rs
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/data-plane-pool/: Cargo.toml
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/data-plane-pool/src/: capability_honesty.rs  credential.rs  dynamodb.rs  http.rs  ident.rs  lib.rs  mongo.rs  mssql.rs  mysql.rs  postgres.rs  redis.rs  registry.rs  resolver.rs  sqlite.rs  tls.rs
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/data-plane-server/: Cargo.toml
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/data-plane-server/src/: acme.rs  auth.rs  automations.rs  config.rs  graph.rs  lib.rs  main.rs  metrics.rs  nano.rs  one.rs  one_admin.rs  one_email.rs  one_files.rs  one_oauth.rs  one_totp.rs  outbox.rs  quota.rs  ratelimit.rs  routes.rs  server.rs  usage.rs
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/data-plane-server/src/pb/: auth.rs  auth_flows.rs  backups.rs  batch.rs  collections.rs  crons.rs  files.rs  filter.rs  hooks.rs  logs.rs  mod.rs  predicate.rs  ratelimit.rs  realtime.rs  records.rs  rules.rs  settings.rs
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/data-plane-server/ui/: admin.html
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/engine-conformance/src/: lib.rs
apps/baas/mini-baas-infra/docker/services/data-plane-router/crates/engine-conformance/tests/: conformance.rs
apps/baas/scripts/: bootstrap-env.mjs  bootstrap.mjs  reset-database.mjs  vault-env.mjs  vault-session.mjs
apps/baas/sdk/: .gitignore  CHANGELOG.md  Dockerfile.codegen  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/baas/sdk-kotlin/: .gitignore  README.md  build.gradle  settings.gradle
apps/baas/sdk-swift/: APIs.swift  Grobase.podspec  Package.swift  README.md  URLSessionImplementations.swift  project.yml
apps/baas/site/: .gitignore  .htmlvalidate.json  .npmrc  .stylelintrc.json  Dockerfile  README.md  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/baas/wiki/: 06-product-assessment.md  07-commercial-viability-report.md  api-versioning-policy.md  cloud-edition-design.md  competitive-matrix.md  cost-analysis.md  cutover-status.md  dynamodb-htap-engine.md  grobase-master-plan.md  grobase-vs-supabase-offer.md  marketability-readiness.md  nano-edition.md  nano-vs-pocketbase.md  offer-sheet-v2.md  operations-runbook.md  orgs-rbac-design.md  roadmap-to-market.md  security-residuals-runbook.md  service-tiers.md  status-sla.md  trust-center.md
apps/opposite-osiris/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
apps/osionos-desktop/: .gitignore  build.sh  install-app.sh
apps/osionos-desktop/chrome/: titlebar.html
apps/osionos-desktop/src-tauri/: tauri.conf.json
apps/osionos-electron/: .gitignore  Dockerfile.native-test  build-native.sh  build.sh  electron-builder.native.json  install-app.sh  main.js  native-migrate.sh  package.json  release.sh
dist-selfhost/scripts/: gen-cert.sh  gen-secrets.mjs
docs/security/: vault-owner-recovery-and-invite.md
docs/troubleshoot/: trust-ca-from-host.md
infrastructure/desktop/: README.md  track-binocle-launch.sh
infrastructure/makes/: app.mk  baas-verify.mk  certs.mk  common.mk  compose.mk  docker-build.mk  docker.mk  grobase.mk  pipeline.mk  repo.mk
infrastructure/node/: entrypoint.sh
infrastructure/tls/: nginx.conf
models/: calendar-migration.sql  mail-migration.sql  osionos-bridge-migration.sql  osionos-folder-surface-migration.sql  rls-hardening-migration.sql
tools/seeds/: backfill_covers.sql  seed_academy.py  seed_academy.sql  seed_arch.py  seed_arch.sql  seed_content.py  seed_content.sql  seed_gallery_media.py  seed_gallery_media.sql
wiki/: README.html  README.md  colleague-make-all-onboarding.md  host-browser-https-pipeline.md
wiki/acccessibility/: wcag.md
wiki/architecture/: typescript.md
wiki/back/: 01_architecture.md  02_operations.md  03_abac.md  04_transactions.md  05_admin_endpoints.md  06_webhooks.md  07_backups.md  08_edge_functions.md  09_tenant_lifecycle.md  CHANGELOG.md  README.md  agent-prompt-agnostic-baas.md  agnostic-report.md  agnostic-vs-incumbents.md  agnostic_back.md  commands.md  milestones.md  secure-baas-abac-pdp-rls.md  secure-baas-adapter-spi.md  secure-baas-module-system.md  secure-baas-product-roadmap.md  secure-baas-realtime-event-plane.md  secure-baas-runtime-migration.md  secure-baas-tenancy-isolation.md  secure-baas-transactions-acid-saga.md  secure-baas-trust-boundary.md  secure-baas-verification-plan.md  security.md  typescript-substitution-audit.md  verify-and-test.md
wiki/clients/scenarios/: cursor.md
wiki/cybersecurity/: auth-environment.md
wiki/infrastructure/: mjs_vs_js.md
wiki/security/: README.md  baas-rls-audit.md  opposite-osiris-security-review.md  retrieve_fly_seed_admin_right.md  vault-admin-seed-retrieval.md  vault-fly-admin-setup.md  vault-publish-from-home.md  vault-session-management.md
wiki/todo/: M1-hardening.md  M11-external-app-integration.md  M2-federation.md  M3-coherence.md  M4-observability.md  M5-security.md  README.md
(+798 files in other folders)
