[workspace]
resolver = "2"
members = [
    "crates/data-plane-core",
    "crates/data-plane-pool",
    "crates/data-plane-server",
    "crates/engine-conformance",
]
# engine-conformance is a test-only battery (run via `make conformance-*`); it
# is NOT part of the production router binary's dependency graph, so it is
# excluded from default builds (`cargo build`) — the Docker image build only
# compiles the bin's graph. `cargo test -p engine-conformance` still works
# because it remains a workspace member.
default-members = [
    "crates/data-plane-core",
    "crates/data-plane-pool",
    "crates/data-plane-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
bson = { version = "2.10", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.14"
futures = "0.3"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
# R7: MySQL adapter. `default-rustls` selects rustls (matches the tls posture
# of the rest of the workspace; avoids dragging in openssl).
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust", "rustls-tls"] }
# R8: Redis adapter (KV/Hash). `tokio-comp` provides async runtime hooks;
# `connection-manager` gives us an auto-reconnecting Arc-cheap pool handle.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
# R8: HTTP passthrough adapter. `rustls-tls` to match the rest of the
# workspace's TLS posture; `json` for serde integration.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# R8: percent-encode HTTP path segments (resource ids etc.) safely.
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
# External PostgreSQL mounts (a client's Supabase project, G-phase) require
# TLS; rustls matches the workspace posture (mysql_async/reqwest above). The
# connector only engages when the DSN says sslmode=require/verify-* — local
# mounts keep the NoTls path byte-identical.
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }
