[workspace]
resolver = "2"
members = [
    "crates/data-plane-core",
    "crates/data-plane-pool",
    "crates/data-plane-server",
    "crates/engine-conformance",
]
# engine-conformance is a test-only battery (run via `make conformance-*`); it
# is NOT part of the production router binary's dependency graph, so it is
# excluded from default builds (`cargo build`) — the Docker image build only
# compiles the bin's graph. `cargo test -p engine-conformance` still works
# because it remains a workspace member.
default-members = [
    "crates/data-plane-core",
    "crates/data-plane-pool",
    "crates/data-plane-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# Strip + thin-LTO the production binary. Before this profile existed the
# release build shipped DEFAULT flags — a 29 MB binary with full debug symbol
# tables. Thin LTO keeps build times sane for the 9-engine workspace; the nano
# profile below goes further for the single-engine build.
[profile.release]
strip = true
lto = "thin"

# Nano edition (single-binary, PocketBase-class): smallest credible binary that
# is still fast. `opt-level = "s"` (not "z") keeps SQLite + hot loops quick;
# fat LTO + 1 codegen unit maximize cross-crate dead-code elimination;
# `panic = "abort"` drops the unwinder + landing pads (the nano process model
# is restart-on-crash, same as PocketBase).
[profile.nano]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
anyhow = "1"
# binocle-one: password hashing (argon2id — passwords are low-entropy, unlike
# API keys) + HS256 JWT mint/verify. pem support off: no PEM keys in one.
argon2 = "0.5"
jsonwebtoken = { version = "9", default-features = false }
async-trait = "0.1"
axum = "0.7"
bson = { version = "2.10", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
deadpool-postgres = "0.14"
# R-sqlite: embedded SQLite engine. `bundled` compiles SQLite in (no system
# libsqlite3 — distroless-safe); deadpool-sqlite gives an async pool that runs
# rusqlite's sync API on a blocking thread via `interact()`.
rusqlite = { version = "0.31", features = ["bundled"] }
deadpool-sqlite = "0.8"
# R-mssql: Microsoft SQL Server (TDS) via the pure-Rust tiberius driver +
# bb8 pool. `rustls` matches the workspace TLS posture; `tokio-util` provides
# the AsyncRead/Write compat tiberius needs over a tokio TcpStream.
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
mongodb = "3"
# R7: MySQL adapter. `default-rustls` selects rustls (matches the tls posture
# of the rest of the workspace; avoids dragging in openssl).
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust", "rustls-tls"] }
# R8: Redis adapter (KV/Hash). `tokio-comp` provides async runtime hooks;
# `connection-manager` gives us an auto-reconnecting Arc-cheap pool handle.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
# R8: HTTP passthrough adapter. `rustls-tls` to match the rest of the
# workspace's TLS posture; `json` for serde integration.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# R8: percent-encode HTTP path segments (resource ids etc.) safely.
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
# External PostgreSQL mounts (a client's Supabase project, G-phase) require
# TLS; rustls matches the workspace posture (mysql_async/reqwest above). The
# connector only engages when the DSN says sslmode=require/verify-* — local
# mounts keep the NoTls path byte-identical.
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
# Phase 6 (SECURITY_MODE=max): TLS verify-ca/verify-full for external engine
# mounts. webpki-roots = the Mozilla trust anchors (compiled in, distroless-safe);
# rustls-pemfile parses an optional custom CA bundle (DATA_PLANE_TLS_CA_FILE).
webpki-roots = "0.26"
rustls-pemfile = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }
