[package]
name = "data-plane-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "data-plane-router"
path = "src/main.rs"

# Build shapes. Default = the full production router (every engine + the
# control-Postgres integrations), byte-equivalent to the pre-feature build.
# The nano edition builds `--no-default-features --features nano`: embedded
# SQLite only, in-process auth, no control-plane round-trips.
[features]
default = ["engines-full", "control-pg"]
engines-full = ["postgres", "mongodb", "mysql", "redis", "sqlite", "mssql", "http"]
postgres = ["data-plane-pool/postgres"]
mongodb = ["data-plane-pool/mongodb"]
mysql = ["data-plane-pool/mysql"]
redis = ["data-plane-pool/redis"]
sqlite = ["data-plane-pool/sqlite"]
mssql = ["data-plane-pool/mssql"]
http = ["data-plane-pool/http"]
# Outbox emission + server-backed automations (both talk to the control
# Postgres; the automations webhook action reuses the http engine's SSRF
# guard, hence the pool/http requirement).
control-pg = ["dep:deadpool-postgres", "dep:tokio-postgres", "data-plane-pool/http"]
# Nano edition (single binary, PocketBase-class): embedded SQLite + a local
# key store (rusqlite) + uuid v4 for key material. High-entropy keys are
# stored as SHA-256 digests (sha2 is already in-tree via service_auth) —
# memory-hard KDFs exist for low-entropy passwords, which nano keys are not.
nano = ["sqlite", "dep:rusqlite", "dep:futures", "uuid/v4", "jemalloc-alloc"]
# Default allocator for the static SKUs — fast under concurrency AND returns
# memory via decay (see workspace Cargo.toml note).
jemalloc-alloc = ["dep:tikv-jemallocator"]
# OPT-IN global mimalloc. Measured 2026-06-12: with the thread-local direct
# read path, row buffers alloc+free on one thread and musl's malloc keeps up —
# while mimalloc's per-thread heaps RETAIN freed argon2 arenas (378 MiB after
# 200 logins; 40 MiB after a plain health flood) and never return them. musl
# munmaps large frees immediately, so the idle-RSS budgets hold. Enable only
# if a future workload shows cross-thread allocator contention again.
mimalloc-alloc = ["dep:mimalloc"]
# binocle-one — "our PocketBase": nano + user accounts. Email/password with
# argon2id (passwords ARE low-entropy) + HS256 JWTs minted/verified in-process,
# the OAuth2/OIDC provider matrix, SMTP mail codes (verification/reset/OTP)
# and RFC 6238 TOTP MFA (hmac+sha1 — authenticator apps mandate SHA1).
# File storage rides the same feature: multipart upload + jpeg/png thumbnails.
one = ["nano", "pbcompat", "hooks", "acme", "s3", "dep:argon2", "dep:jsonwebtoken", "dep:lettre", "dep:hmac", "dep:sha1", "dep:image", "axum/multipart"]
# PocketBase-compatible facade (/api/...): PB filter DSL, collections registry,
# records/realtime/files in PB envelopes — so the official PB SDKs work
# unchanged. Rides in `one`; nano stays headless-minimal without it.
pbcompat = ["dep:zip"]
# JS hooks (pb_hooks): QuickJS runtime — rides in one, never nano.
hooks = ["dep:rquickjs"]
# In-binary automatic HTTPS via ACME (ONE_HTTPS_DOMAIN).
acme = ["dep:rustls-acme", "dep:axum-server", "dep:tokio-stream", "dep:webpki-roots"]
# S3 file storage backend (settings.s3).
s3 = ["dep:rusty-s3"]

[dependencies]
data-plane-core = { path = "../data-plane-core" }
data-plane-pool = { path = "../data-plane-pool", default-features = false }
anyhow = { workspace = true }
axum = { workspace = true }
# Phase 7 bypass: Rust-native API-key verification (tenant-control) + mount
# resolution (adapter-registry) over HTTP. Go stays the identity authority.
reqwest = { workspace = true }
# Phase 7d: outbox emission to the system Postgres (realtime/webhooks/
# projections read public.outbox_events and must keep firing post-cutover).
deadpool-postgres = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
# Nano edition: local key store + SHA-256 key digests + v4 key material +
# the SSE stream adapter (futures::stream::unfold over a broadcast receiver).
rusqlite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
rquickjs = { workspace = true, optional = true }
rustls-acme = { workspace = true, optional = true }
axum-server = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
rusty-s3 = { workspace = true, optional = true }
# binocle-one: password hashing + JWT sessions + SMTP codes + TOTP MFA.
argon2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
image = { workspace = true, optional = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webpki-roots = { workspace = true, optional = true }

[dev-dependencies]
# For implementing the `TxHandle` trait (which is `#[async_trait]`) in the
# expired-transaction reaper unit tests.
async-trait = { workspace = true }
